Redesign of item_view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">CustomSearch</string>
+    <string name="app_name">WikipediaSearch</string>
     <string name="search">Search...</string>
 </resources>
